stencils/c66-user.yml
apiVersion: v1
kind: Namespace
metadata:
  name: c66-system
  labels:
    certmanager.k8s.io/disable-validation: "true"
