stencils/setup-namespace-app.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ${formation.name}
  annotations:
    cloud66.com/relay-events: "true"
