stencils/setup.yml
# this sets up the cluster with namepsace etc
# should be the first yaml to run
kind: Namespace
apiVersion: v1
metadata:
  name: c66-system
  labels:
    certmanager.k8s.io/disable-validation: "true"
    cloud66.com/relay-events: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${formation.name}
  annotations:
    cloud66.com/formation-uuid: ${formation.uuid}
    cloud66.com/stencil-uuid: ${stencil.uuid}
    cloud66.com/snapshot-uid: ${snapshot.uid}
    cloud66.com/snapshot-gitref: ${snapshot.gitref}
    cloud66.com/relay-events: "true"
