stencils/deploy.yml
# this is a Stencil for Kubernetes deployments
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${formation.name}
  name: ${concat(service.name, "-dep")}
  annotations:
    cloud66.com/formation-uuid: ${formation.uuid}
    cloud66.com/stencil-uuid: ${stencil.uuid}
    cloud66.com/snapshot-uid: ${snapshot.uid}
    cloud66.com/snapshot-gitref: ${snapshot.gitref}
    cloud66.com/service-name: ${service.name}
spec:
  selector:
    matchLabels:
      app: ${stack.name}
      tier: ${service.name}
  template:
    metadata:
      labels: # be careful changing labels. It can break your deployment
        app: ${stack.name}
        tier: ${service.name}
    spec:
      containers:
        - name: ${service.name}
          image: ${concat(repo, "/", image(repo, "name"), ":", image(repo, "tag"))}
          ports: # Comment out this (and the line below) if don't need to expose any ports for this pod
            - containerPort: ${require("PORT")}
          command: ${require("COMMAND")}
      imagePullSecrets:
      - name: cloud66-registry-pull-secret
