stencils/external_dns.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: external-dns
  namespace: ${formation}
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: cloud66/external-dns:latest
        args:
        - --source=service
        - --source=ingress
        - --domain-filter=${endpoint_suffix}
        - --provider=zonedns
        - --zonedns-scheme=${container_net["scheme"]}
        - --zonedns-host=${container_net["host"]}
        - --zonedns-port=${container_net["port"]}
      imagePullSecrets:
      - name: cloud66-user-registry-pull-secret
