stencils/ingress.yml
---
# this is a Stencil for Kubernetes service.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${formation.name}
  name: ${concat(service.name, "-ingress")}
    kubernetes.io/ingress.class: "nginx"
    # use the ssl.js transformer to add SSL to this ingress
  labels:
    app: ${application.name}
    tier: ${service.name}
spec:
  # use the ingress.js transformer to automatically configure this ingress.
  # the following are examples and can be removed
  # rules:
  # - host: ${endpoint(service.name)}
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: ${concat(service.name, "-svc")}
  #         servicePort: ${require("EXTERNAL_PORT")}
  #
  # uncomment the following section to let cert-manager know it should generate an SSL certificate for the given hosts and store it in the given secret
  # if you plan to use cert-manager, make sure that you include the cert_manager.yml stencil
  # tls:
  # - secretName: ${service.name}-tls
  #   hosts:
  #   - ${endpoint(service.name)}
